<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medicine</string>
    <string name="hello_world">Hello world</string>
    <string name="action_settings">Settings</string>

    
    
    
    
    
    <string name="dieda_detailtext0">
	\u3000\u3000生活中难免有伤到皮肤、划出伤口的情况，对于普通人来说，小伤口或许没什么问题，但对于糖尿病患者来说，危害可能超乎你的想象。糖尿病人伤口往往比健康人需要更多的愈合时间，尤其是当伤口位于足部时，如果处理治疗不当，还可能会发展为糖尿病足。面对伤口糖友该怎么办呢？\n
	\u3000\u30001、首先应该做的就是控制好血糖，保持血糖的正常稳定。这对于伤口的愈合是非常关键的因素。\n
	\u3000\u30002、如果伤口没有发生较大的溃疡，只是愈合较慢，可使用生理盐水冲洗伤口，每天定时换药。并加用适量胰岛素外用，胰岛素可以刺激肉芽的生长，可促进伤口愈合。\n
	\u3000\u30003、如果伤口出现了较为严重的溃疡，伤口长期不能够愈合，需要做好伤口的清创工作，及时清除伤口处的坏死组织，清创后使用促进伤口愈合的药进行治疗，促进伤口的愈合。当然，这些糖友不能自己在家处理，需要医生协助处理才可以。\n
	\u3000\u30004、糖尿病患者机体抵抗力弱，可以进行营养支持疗法，以提高机体的营养水平，增强组织细胞的能力，这样才能促进伤口的愈合。饮食上多吃富含蛋白质、维生素的食物，如瘦肉、鱼类、牛奶等，以加强营养。\n
	\u3000\u3000总之，糖尿病患者平时应该严格控制血糖，预防糖尿病并发症的出现；注意自身保护，尽量不要出现伤口；一旦出现伤口时，应该及时就医，在医生的指导下合理治疗，早日促进伤口愈合。\n
    </string>
    
    <string name="dieda_detailtext1">
	\u3000\u3000孩子生病了不愿意喝苦药，有些家长就捏着他们的鼻子喂。有的人喝中药等比较苦的药时，也喜欢捏着鼻子。其实，这样不仅不能缓解药物带来的不适，还可能引起呛咳。\n
	\u3000\u3000首先，捏鼻子喝药不能减少苦味。人的味觉主要是通过舌头上的味蕾来实现，捏着鼻子喝药并不能影响味蕾，因此对缓解苦味的作用十分有限。\n
	\u3000\u3000其次，这样喝药容易发生呛咳。人的咽喉下端有两条通道，一条是气管，一条是食道。气管的前上方附着一片形似树叶状的会厌软骨，它能紧密配合身体的呼吸和吞咽动作。会厌软骨在吸气、说话时会打开，进食、吞咽时关闭，以防食物误入气管。然而，如果在吞咽药物的同时叫喊、哭闹，尤其鼻子被捏住时，会厌软骨就会无所适从，可能导致药物、食物进入气管，轻者发生呛咳、气急，重者出现呼吸困难、肺部感染、窒息等。\n
	\u3000\u3000最后，这可能损伤儿童鼻黏膜，引起中耳炎。与成人相比，婴幼儿的鼻腔黏膜、血管比较娇嫩，捏鼻子喂药时，家长的力度如果没控制好，可能导致鼻黏膜和血管损伤。另外，捏鼻子时孩子会挣扎，可能导致鼻腔分泌物通过其短直的耳咽管进入中耳，引发中耳炎。\n
	\u3000\u3000成人服苦药时，如果没有明确禁忌，可在喝完药后含一颗话梅或一块陈皮缓解。家长应为儿童选择口感较好的专用药。如果药物确实很苦，可在咨询药师，明确不会影响药效的前提下，将药品研碎，或加白糖和少许温开水调匀，用小匙放入婴幼儿口中，并轻压其舌头，待药液服完后，将汤匙取出。\n
	\u3000\u3000如果服药时发生呛咳，要立即停止服药，缓慢呼吸，坐直并请周围的人用力拍打背部。婴幼儿服药呛咳，可采取头低脚高位，并及时就诊，防止引起肺炎、窒息等严重后果。\n
    </string>
    <string name="dieda_detailtext2">
	\u3000\u3000在日常生活中对于有些人似乎是家常便饭，泛指人因跌、打、碰、磕等原因所致的软组织损伤，以肿胀、疼痛为主要表现。有些人发生跌打损伤后，急于诊治，往往使用药物熏洗，其实有时候这样做极易事与愿违。不但没有疗效,而且病情会越来越严重。\n
	\u3000\u3000跌打损伤如何快速消肿呢？如果只损伤了软组织，适当的时候采用中草药熏洗，有益于缓解症。中医所用的熏洗药多由当归、三七、红花、白芍、牛膝、没药、乳香、五灵脂等中草药配伍而成，具有活血化瘀、止痛消肿的功效。但是有时候也只是表面功夫。\n
	\u3000\u3000但是，如果跌打损伤刚刚发生，马上就用药物洗治，患处血管就会加剧扩张，渗血、水肿也会随之加重，不仅会造成软组织粘连和局部功能减弱，而且还极易增强疼痛感。因此，应在发生损伤后立即采用冷敷，这样可使患处血管收缩并减少出血、水肿和疼痛。到损伤的第三四天后再采用三七活血膏外敷洗，连用几日，便可达到活血化瘀、止痛消肿的效果。\n
	\u3000\u3000中医治疗跌打损伤有着几千年的历史，古称“跌打损伤”为诸伤之总论，多因外力作用，或自身姿势不正确的情况下用力过猛而造成的。中医把凡因外力作用于人体而引起的筋骨伤损、瘀血肿痛、气血不和、经络不通以至脏器受损等，统称为跌打损伤。
		三七活血膏作为中医传统黑膏药，可广泛用于治疗跌伤、撞伤、挫伤、扭伤等各种跌打损伤，对于关节扭伤、肌肉拉伤、瘀血肿胀等软组织损伤疗效显著，尤其适用于各种久治不愈的陈旧性拉伤、扭伤所引起的病痛困扰！
    </string>
  
    <string name="dieda_detailtext3">
	\u3000\u3000春节期间，亲朋好友欢聚一堂，难免以酒助兴。但专家提醒，餐桌上适量的饮酒可以带来欢愉，调节气氛。但饮酒过量却会给身体带来一定的危害。广医三院消化内科副主任医师谭慧珍依据往年的经历称，春节期间医院急诊总是有不少因为饮酒过度引发身体不适而来就诊的患者。那么过度饮酒有哪些危害，春节想要健康饮酒，有什么需要注意的呢？\n
	\u3000\u3000谭慧珍主任介绍，不管是什么类型的酒，过量喝酒，对身体造成的伤害首先是胃部，酒精（乙醇）具有亲脂性和溶脂性能，这两个性能可导致胃黏膜糜烂和黏膜出血，轻则引起酒后呕吐，反酸，重者出现急性胃黏膜损伤，引起上消化道出血。\n
	\u3000\u3000而喝酒带来的更严重的影响是危及生命。谭慧珍指出，大量喝酒可促使胰液大量分泌，损伤胰腺的腺泡细胞，激活炎症反应，引发急性胰腺炎。而一旦出现重症急性胰腺炎，将会危及生命。此外，大量喝酒对脑部功能也有所影响，可能导致昏睡和昏迷，抑制延髓呼吸和循环中枢进而危及生命。此外还有这类个案，有些酒醉者昏睡伴有呕吐，呕吐物堵塞呼吸道，导致窒息缺氧而死，谭医生称虽然这样极端的案例发生率不高，但还是应当予以警惕。\n
	\u3000\u3000此外，对于一些老年人，尤其是原本就有心脑血管疾病的病人，究竟会诱发冠状动脉痉挛、恶性心律失常、血压急剧升高等。谭医生介绍她就遇到过有老人家原本就有心脑血管疾病，但假期间因亲朋好友团聚，兴奋不已，饮酒过度，会加重原有的心脑血管疾病，最后出现心源性猝死的症状。因此她特别提醒老年人要尤其注意不要饮酒过度，以免出现类似脑出血、心源性猝死等症。\n
    </string>
    
    <string name="dieda_detailtext4">
	\u3000\u3000现在人们的工作忙，白天工作了一天，晚上还得再加班熬夜，这样就会让健康受到损害，甚至让自己患上各种各样的疾病，但是现在工作不好找，换别的工作也不表示就可以不熬夜，既然无法避免，那我们就得想办法来补救，下面，我们一起来看看怎样做才可以减轻熬夜对身体所造成的伤害。\n
	\u3000\u3000熬夜对身体健康的伤害是很大的，很多人也多少知道这一点，但是却因为工作的原因而不得不熬夜，这时候，我们如果不希望健康受到损害，就得采取一些措施来补救。\n
	\u3000\u3000熬夜对身体有七大伤\n
	\u3000\u3000伤害一：耳聋耳鸣。睡眠不足易造成内耳供血不足，伤害听力，长期熬夜可能导致耳聋。\n
	\u3000\u3000伤害二：肥胖。熬夜的人经常吃“夜宵”，不但难消化，隔日早晨还会食欲不振，造成营养不均衡，引起肥胖。\n
	\u3000\u3000伤害三：皮肤受损。皮肤在晚10—11点进入保养状态，长时间熬夜，人的内分泌和神经系统就会失调，使皮肤干燥、弹性差、晦暗无光，出现暗疮、粉刺、黑斑等问题。\n
	\u3000\u3000伤害四：记忆力下降。熬夜者的交感神经在夜晚保持兴奋，到了白天就会出现没精神、头昏脑涨、记忆力减退、注意力不集中、反应迟钝等。时间长了，还会出现神经衰弱、失眠等问题。\n
	\u3000\u3000伤害五：肠胃危机。人的胃黏膜上皮细胞平均2—3天就要更新一次，并且一般是在夜间进行的。如果夜间进餐，胃肠道得不到休息，会影响其修复过程。同时，夜宵长时间停滞在胃中，促使胃液的大量分泌，对胃黏膜造成刺激，久而久之，易导致胃黏膜糜烂、溃疡。\n
	\u3000\u3000伤害六：免疫力下降。经常处于熬夜、疲劳、精神不振的状况，人体的免疫力会跟着下降，感冒、过敏等就会不期而至地找到你头上。\n
	\u3000\u3000伤害七：心脏病风险。长期“黑白颠倒”的人，不仅脾气会变坏，内脏也得不到及时调整，使心脏病的患病几率升高。\n
	\u3000\u3000熬夜的人在第二天都会感觉浑身乏力，提不起精神，有技巧地熬夜，可将伤害降到最低。\n
    </string>
    
    <string name="dieda_detailtext5">
    \u3000\u3000打喷嚏、鼻塞、流鼻涕、发烧……你可能感冒了!感冒药恐怕是成员最多的，大家庭眼花缭乱了，该怎么选?\n
    \u3000\u3000感冒的治疗旨在解除鼻黏膜充血，缓解鼻腔中毛细血管的肿胀而减轻鼻塞感，减少鼻分泌物。此外还有助于保持咽鼓管和窦口畅通，从而防止继发感染。由于感冒发病急促，症状复杂多样，因而至今没有一种药物能解决所有这些问题，因此，治疗感冒药多采用复方制剂。\n
    \u3000\u3000常用的组方搭配有：\n
    \u3000\u30001、解热镇痛药：退热和缓解头痛、关节痛等症状，例如阿司匹林、对乙酰氨基酚、双氯芬酸等。\n
    \u3000\u30002、鼻黏膜血管收缩药：减轻鼻窦、鼻腔黏膜血管充血，解除鼻塞症状，例如苯丙醇胺、伪麻黄碱。\n
    \u3000\u30003、组胺拮抗剂：使下呼吸道的分泌物干燥和变稠，减少打喷嚏和鼻溢液，同时具有轻微的镇静作用，例如氯苯那敏(扑尔敏)和苯海拉明等。\n
    \u3000\u30004、中枢兴奋药：有些制剂中含有咖啡因，一是为了加强解热镇痛药的疗效，二是抵消抗组胺药所引起的嗜睡作用。\n
    \u3000\u30005、抗病毒药：抑制病毒合成核酸和蛋白质，并抑制病毒从细胞中释放，如金刚烷胺、吗啉胍。\n
    </string>
    
    <string name="dieda_detailtext6">
    \u3000\u3000很多人在输液时觉得药滴得太慢，想赶快打完针走，就自己调快速度。还有的人觉得有点不舒服，就调慢了滴速。其实，这样做会影响治疗。\n
    \u3000\u3000静脉输液是利用大气压和液体静压原理将药物由静脉输入体内，是一种非常严格和专业的技术操作。滴注速度必须根据患者年龄、病情、药物性质、输液总量和输液目的等多方面因素确定，而不能单靠患者的感受随意调节。\n
    \u3000\u3000一般情况下，成年人输液速度为40—60滴/分钟。儿童、老年人由于器官发育不完全或功能降低，输液速度应减慢，儿童的输液速度为20—40滴/分钟，老年人输液速度不应超过40滴/分钟。一些特殊患者，如患有心脏病(尤其是心功能不全者)或肺部疾病者，输液速度更应减慢，30—40滴/分钟为宜。\n
    \u3000\u3000输液如果速度过快，易加重心脏负担，引起心衰或肺水肿等不良反应。如硝普钠在滴注时需严格控制滴速，过快可使血压急剧下降。硝酸甘油、单硝酸异山梨酯滴注速度应8—15滴/分钟，过快则可引起血压下降、心率加快甚至昏厥。钾剂滴速过快可能引起高钾血症，表现为四肢无力、手脚口唇发麻、呼吸乏力及呼吸困难、心率减慢、心律紊乱、甚至心脏停搏。\n
    \u3000\u3000输注氨基酸、脂肪乳等肠外营养药物过快，可引起面红、发热、恶心、呕吐、心悸、胸闷等不适。\n
    \u3000\u3000当然，也不是输液速度越慢越好，需要根据病情调整输液速度。抢救脱水严重或失血过多的休克病人应快速补液，通常每小时进入体内的液体达到几千毫升。治疗某些颅内压增高的患者时，20%甘露醇250毫升静滴时间不应超过30分钟，滴速过慢可能起不到降颅压的效果。\n
    \u3000\u3000建议大家在输液时如果想调整速度，应先询问医护人员，告知自己的感受和需求，他们会酌情调整。但大家不可随意调节滴速，以免影响治疗。(董海燕，西安交通大学医学院第一附属医院药学部副主任药师，长期从事临床用药及药理学研究。)\n
    </string>
    
    
    <string name="dieda_detailtext7">
    \u3000\u3000英国劳埃德药房最新调查显示，46％的患者不能正确服用药物。英国皇家药学会专家苏丹•达杰尼也称："据估计，住院患者中有10％是由于未能正确服药导致的。"为此我们整理了人们服药最常犯的8个错误。
    \n
    \u3000\u30001、药片掰开服。缓释片等剂型的结构可保证药物缓慢溶解，逐渐释放。如果遭到破坏，每次服药吸收剂量会大大增加。\n
    \u3000\u30002、用贴剂后洗澡不当。止痛药、激素和运动损伤药常被做成贴剂，这类药具有吸收缓慢而稳定的特点。如果洗澡时水过热，或者长时间冲洗，让贴剂周围区域太热，血管扩张，可能让更多的药物被吸收，容易发生不良反应。此时贴剂中的胶类成分可能刺激温暖的皮肤，引起瘙痒。另外，用雌激素贴剂后晒太阳还可能出现皮肤发热、潮红。\n
    \u3000\u30003、运动前服布洛芬。运动前服止痛药能缓解疼痛，但可能掩盖症状，增大受伤的风险。荷兰马斯特里赫特大学的研究发现，某些运动前（如快速跑步或骑自行车）服用布洛芬等止痛药，可能造成胃壁损害。这些药抑制了前列腺素的合成，虽然它会引起疼痛，但也有助于产生消化道保护性黏液。研究人员认为服这些药后锻炼，后果将更严重。\n
    \u3000\u30004、运动前不宜用的药物还有很多。例如，服降压药β受体阻滞剂后短时间内运动，可能抑制正常的血压上升，导致大脑供血不足而昏厥。服抗生素环丙沙星后高强度工作或搬抬重物，肌肉更易疲劳。服他汀后突然剧烈运动，会增加肌肉疼痛的风险\n
    \u3000\u30005、药膏涂太厚。含止痛成分（如水杨酸甲酯）的药膏不宜涂得过厚，薄薄一层即可，同时应避免与其他止痛药（如药片或贴剂）联用，以免过量。此外，长期使用类固醇激素药膏，还可能导致皮肤变薄，甚至破裂。雌激素药膏过量还可引起激素水平升高，出现乳房疼痛。\n
    \u3000\u30006、感冒乱吃止痛药。有研究表明，感冒时乱吃止痛药，反而可能延长发生症状的时间。如布洛芬除了止痛退热外，还有抑制炎症的作用。感冒时，流鼻涕等症状都可能与感染有关，如果没有疼痛或发热就吃止痛药，会影响人体对感染的反应。\n
    \u3000\u30007、破损皮肤用药膏。有些皮疹或昆虫叮咬需要用激素药膏。但如果皮肤破损，应咨询医生后停用。因为激素可能降低人体免疫力，让伤口更易被感染。\n
    \u3000\u30008、扑热息痛用过量。扑热息痛（对乙酰氨基酚）在24小时内服用量不宜超过4克，否则易在肝脏积聚，造成伤害。英国爱丁堡大学对161例服用扑热息痛过量的患者分析发现，他们大多是因为牙痛或腰痛，4~5天前服扑热息痛过量到医院治疗。\n
    </string>
    	
    <string name="zhongyi_detailtext">
  	\u3000\u30001、浸泡根据医生的方子配齐药材后，把药材浸泡在脸盆里，或者大煮锅里。一般需要浸泡一个晚上，8小时左右，浸泡彻底有助于药汁熬出。\n

　　\u3000\u30002、煎药准备好一个大煮锅和三个大脸盘，煎三次，每次半小时到1小时。每次煎好后，把药汤倒到脸盆里存着。煎药的过程和药厂没有太大区别。\n

　　\u3000\u30003、沉淀由于一些中药里有泥沙杂质，如果不沉淀，做成的膏方吃起来影响口感，所以煎好的药汁需要放上一段时间沉淀，然后用纱布进行过滤，滤过之后的就是清液。沉淀一般需要一个小时。\n

　　\u3000\u30004、浓缩这个过程非常关键，也可以说是自制膏方中最累人的部分。把清液放入锅中煮开，然后小火炖着，并适当放入冰糖、阿胶等，炖的过程中不停地搅拌，不能让药汤烧糊。对初学者来说，沾锅烧糊是很容易出现的问题。浓缩需要多长时间？这要根据每个人的膏方配料、水量多少而定。\n    
	\u3000\u3000服用膏方的注意事项\n

　　\u3000\u30001、服用含有人参的补气膏方时应忌食萝卜；服用含有首乌的膏方时忌服猪、羊血及铁剂；服滋补类膏方时尽量减少喝茶，茶叶中的茶多酚有解药的作用，影响膏方功效。\n

　　\u3000\u30002、一般膏方需空腹服用。如果脾胃功能较弱，可在饭后15～30分钟服用，以固护脾胃。养心安神的膏方在睡前服效果最好。\n

　　\u3000\u30003、膏方里多为滋补类中药，服用期间忌肥甘厚味和辛辣刺激以及海鲜一类所谓“发”的食物，烹调时少放姜、蒜、葱之类的调味品。\n

　　\u3000\u30004、温水化膏口服软膏需用温水化开后服用，切不可使用热水，因为大部分膏方中都含有蜂蜜，过热会损伤其营养。如果是从市面上买回的硬膏，如固元膏、桂圆膏等，在食用时要充分咀嚼，否则会增加胃的负担。\n

　　\u3000\u30005、阴凉储存膏方均需低温保存，宜储存在陶瓷、玻璃制品中。现在各大医院膏方多采用真空包装，一次一小包，方便携带服用，但须存放在通风低温处。如果是大罐包装膏方，服用时须使用干净的汤勺取用，防止发霉变质。
	</string>
	
    <string name="changweiyan_detailtext">
      \u3000\u3000感染性胃肠炎可因感染病毒、细菌、寄生虫引起。毒物及药物可引起化学性胃肠炎。病毒感染是胃肠炎最常见的病因，有多种病毒可引起胃肠炎，最常见的是轮状病毒，其次是诺沃克病毒、星状病毒和肠腺病毒。\n
      \u3000\u3000胃肠炎症状的类型和严重程度取决于微生物或毒物的类型和量的大小。最常见的症状是腹泻，其他症状包括：腹痛、恶心、呕吐、发热、食欲减退、体重减轻（可能是脱水的征象）、大量出汗、皮肤湿冷、肌肉痛或关节僵硬、大便失禁等。\n
	\u3000\u3000剧烈的呕吐和腹泻可以很快导致脱水，其表现有虚弱、极度口渴、少尿或尿色加深、皮肤干燥、口干、眼球下陷，婴儿还可表现为啼哭时少泪。严重的呕吐或腹泻可以引起低钠血症、低钾血症、低血压等。饮用大量含盐少或不含盐的水分来补充液体的病人尤易出现低钠血症。水和电解质紊乱有潜在的风险，特别是对于病重、虚弱、年幼或年老的患者，严重的病例可以出现休克和肾功能衰竭。\n
	\u3000\u3000治疗胃肠炎最重要的是补充水和电解质。通常患者只需卧床休息并饮用足量的水分（如口服补液盐溶液）即可。即使是呕吐的患者也要尽量多饮水。哺乳期的婴儿应继续哺乳。碳酸饮料、茶、运动饮品、含咖啡因的饮料及果汁并不适于补液。如果呕吐或腹泻持续时间较长或有严重脱水，有必要进行静脉补液。呕吐剧烈时可加用止吐药。如果腹泻持续时间超过24～48小时并且没有迹象表明有更严重的细菌感染，可加用止泻药。通常儿童不建议使用止吐药和止泻药。\n
	\u3000\u3000由于抗生素可能会引起腹泻或促进耐药菌生长，即使胃肠炎的致病菌已经明确，抗生素通常也不建议使用。但是，某些病原菌（如弯曲杆菌、志贺菌、霍乱弧菌等）感染或患者有旅行者腹泻，可使用抗生素。\n
	\u3000\u3000对于病毒感染所致的胃肠炎，抗生素并无效果。寄生虫感染所致胃肠炎需使用抗寄生虫药物。
    </string>
    
    <string name="medicine_name">药品名称：</string>
    <string name="medicine_xingzhuang">性状：</string>
    <string name="medicine_shiyingzheng">适应症：</string>
    <string name="medicine_yongfayongliang">用法用量：</string>
    <string name="medicine_zhuyishixiang">注意事项：</string>
    <string name="medicine_xianghuzuoyong">药物相互作用：</string>
    <string name="medicine_yaolizuoyong">药理作用：</string>
    
    
    <string name="medicine_name_text">\u3000\u3000泰诺林</string>
    <string name="medicine_xingzhuang_text">\u3000\u3000本品为白色薄膜衣异形片，除去薄膜衣显白色或类白色。</string>
    <string name="medicine_shiyingzheng_text">\u3000\u3000用于普通感冒或流行感冒引起的发热，也用于缓解轻中度疼痛如头痛、关节痛、偏头痛、牙痛、肌肉痛、神经痛、痛经。</string>
    <string name="medicine_yongfayongliang_text">\u3000\u3000口服。成人一次1～2片，12～18岁儿童一次1片，若持续发热或疼痛，每8小时一次，24小时不超过3次。</string>
    <string name="medicine_zhuyishixiang_text">
        	\u3000\u3000 1．不推荐12岁以下儿童使用本品。\n
			\u3000\u30002． 应整片服用，不得碾碎或溶解后服用。\n
			\u3000\u30003．本品为对症治疗药，用于解热连续使用不得超过3天，用于止痛不得超过5天，症状未缓解请咨询医师或药师。\n
			\u3000\u30004．对阿司匹林过敏者慎用。\n
			\u3000\u30005．不能同时服用其他解热镇痛药的药品（如某些复方抗感冒药）。\n
			\u3000\u30006．肝肾功能不全者慎用。\n
			\u3000\u30007．孕妇及哺乳期妇女慎用。\n
			\u3000\u30008．服用本品期间不得饮酒或含有酒精的饮料。\n
			\u3000\u30009．对本品过敏者禁用，过敏体质者慎用。\n
			\u3000\u300010．当本品性状发生改变时禁用。\n
			\u3000\u300011．请将本品放在儿童不能接触的地方。\n
			\u3000\u300012．如正在使用其他药品，使用本品前请咨询医师或药师。\n
			</string>
    <string name="medicine_xianghuzuoyong_text">\u3000\u30001．应与巴比妥类（如苯巴比妥）或解痉药（如颠茄）的患者，长期应用本品可致肝损害。\n
	\u3000\u30002．本品与氯霉素同服，可增强后者的毒性。\n
	\u3000\u30003．如与其他药物同时使用可能会发生药物相互作用，详情请咨询医师或药师。\n

	</string>
    <string name="medicine_yaolizuoyong_text">\u3000\u3000本品能抑制前列腺素合成，具有解热镇痛作用。本品由速释层和缓释层两部分组成，口服后速释层中对乙酰氨基酚迅速溶出而被吸收，产生解热止痛作用，缓释层则缓慢释放对乙酰氨基酚，使作用持续8小时之久。</string>
    
    <string name="medicine_ganmaolingname_text">\u3000\u3000999感冒灵</string>
    <string name="medicine_ganmaolingxingzhuang_text">\u3000\u3000浅棕色至深棕色的颗粒，味甜、微苦。</string>
    <string name="medicine_ganmaolingshiyingzheng_text">\u3000\u3000本品解热镇痛。用于感冒引起的头痛，发热，鼻塞，流涕，咽痛等。</string>
    <string name="medicine_ganmaolingyongfayongliang_text">\u3000\u3000开水冲服，一次1袋，一日3次。小儿减量或遵医嘱。</string>
    <string name="medicine_ganmaolingzhuyishixiang_text">
        	\u3000\u3000 1.·忌烟，酒及辛辣，生冷，油腻食物。\n
			\u3000\u30002.不宜在服药期间同时服用滋补性中成药\n
			\u3000\u30003. 高血压、心脏病、肝病、肾病等慢性病严重者应在医师指导下服用。\n
			\u3000\u30004.本品含对乙氨基酚，马来酸氨苯那敏，咖啡因。服用本品期间不得饮酒或含有酒精的饮料；不能同时服用与本品成分相似的其它抗感冒药；肝，肾功能不全者慎用；膀胱颈梗阻，甲状腺功能亢进，青光眼，高血压和前列腺肥大者慎用；孕妇及哺乳期妇女慎用；服药期间不得驾驶机，车，船，从事高空作业，机械作业及操作精密仪器。\n
			\u3000\u30005.脾胃虚寒，症见腹痛，喜暖，泄泻者慎用。\n
			\u3000\u30006.糖尿病患者、消化道溃疡患者、膀胱颈梗阻、幽门十二指肠梗阻、甲状腺机能亢进、青光眼以及前列腺肥大等患者慎用。\n
			\u3000\u30007.儿童，年老体弱者应在医师指导下使用。\n
			\u3000\u30008.服药3天后症状无改善，或症状加重，或出现新的严重症状如胸闷，心悸等应立即停药，并去医院就诊。\n
			\u3000\u30009.对本药过敏者禁用，过敏体质者慎用。\n
			\u3000\u300010. 本品性状发生改变时禁止使用。\n
			\u3000\u300011.儿童必须在成人监护下使用。\n
			\u3000\u300012.请将本品放在儿童不能接触的地方。\n
			</string>
    <string name="medicine_ganmaolingxianghuzuoyong_text">\u3000\u30001．应与巴比妥类（如苯巴比妥）或解痉药（如颠茄）的患者，长期应用本品可致肝损害。\n
	\u3000\u30002．本品与氯霉素同服，可增强后者的毒性。\n
	\u3000\u30003．如与其他药物同时使用可能会发生药物相互作用，详情请咨询医师或药师。\n

	</string>
    <string name="medicine_ganmaolingyaolizuoyong_text">\u3000\u3000严重肝肾功能不全者禁用</string>
    
    
</resources>
